# toaster-lib

./: CMakeLists.txt  Makefile  README.md
include/: Agent.h  Area.h  CircleArea.h  Entity.h  Human.h  Joint.h  MovableIoTObject.h  MovableObject.h  Object.h  PolygonArea.h  RectangleArea.h  Robot.h  StaticIoTObject.h  StaticObject.h
include/Tools/: MathFunctions.h  TRBuffer.h
src/: Agent.cpp  Area.cpp  CircleArea.cpp  Entity.cpp  Human.cpp  Joint.cpp  MovableIoTObject.cpp  MovableObject.cpp  Object.cpp  PolygonArea.cpp  RectangleArea.cpp  Robot.cpp  StaticIoTObject.cpp  StaticObject.cpp
src/Tools/: MathFunctions.cpp
test/: mainTest.cpp
